# GAME2048_V2

./: .gitignore  command.sh  pyproject.toml  test.txt
app/: main.py  main_actor_critic.py  main_actor_critic_multi.py  main_multi.py  main_multi_db.py  main_random.py  main_state.py  main_weight_visualization.py  test.py  work.py
app/datasource/: mongo.py
app/repo/: actor_critic.py  game.py  table.py  tensor.py  tensor_multi.py  tensor_multi_db.py  tree.py
app/service/: ActorCriticService.py  ActorCriticTrainService.py  MCTSAiService.py  MCTSRunAiService.py  RandomAiService.py  RunAiService.py  TensorAiService.py  TrainAiService.py  TrainMultiAiService.py  TrainSaveDbMultiAiNoRunNoRandomService.py  TrainSaveDbMultiAiNoRunService.py  TrainSaveDbMultiAiService.py  TrainTestService.py
data/summary/game2048_dqn.summary/: events.out.tfevents.1653565641.iseongjaeui-MacBookPro.local  events.out.tfevents.1653565684.iseongjaeui-MacBookPro.local  events.out.tfevents.1653565743.iseongjaeui-MacBookPro.local  events.out.tfevents.1653565768.iseongjaeui-MacBookPro.local  events.out.tfevents.1653565809.iseongjaeui-MacBookPro.local  events.out.tfevents.1653613740.iseongjaeui-MacBookPro.local  events.out.tfevents.1653613924.iseongjaeui-MacBookPro.local  events.out.tfevents.1653613972.iseongjaeui-MacBookPro.local  events.out.tfevents.1653613996.iseongjaeui-MacBookPro.local  events.out.tfevents.1653614047.iseongjaeui-MacBookPro.local  events.out.tfevents.1653614175.iseongjaeui-MacBookPro.local  events.out.tfevents.1653614189.iseongjaeui-MacBookPro.local  (+12 more)
