[tool.poetry]
name = "game2048_v2"
version = "0.1.0"
description = ""
authors = ["tldrd0117 <tldrd0117@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow-macos = "^2.9.0"
tensorflow-metal = "^0.5.0"
protobuf = "<=3.20"

[tool.poetry.scripts]
app = 'app.main:app'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
